# ProjectCPlus

./: CMakeLists.txt  README.md  lab14_oop.sln
lab14_oop/: CosCRUDGUI.h  CosFilme.h  CosReadOnlyGUI.h  Film.cpp  FilmGUI.h  TableModel.cpp  TableModel.h  consola.cpp  consola.h  cosul.h  filme.txt  lab14_oop.cpp  lab14_oop.h  lab14_oop.qrc  lab14_oop.ui  lab14_oop.vcxproj  lab14_oop.vcxproj.filters  main.cpp  repo.cpp  repo.h  repositoryFake.cpp  service.cpp  service.h  teste.cpp  teste.h  validator.cpp  validator.h
